--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.17.5
   google_sign_in: ^6.2.1
   flutter_svg: ^2.0.10+1
+  cloud_firestore: ^4.15.6
 
 dev_dependencies:
   flutter_test:
